@@ -85,6 +85,21 @@ if( get_magic_quotes_gpc() ) {
     
 
 
+// Check that the referrer header is this page, or kill the connection.
+// Used to block XSRF attacks on state-changing functions.
+// (To prevent it from being dangerous to surf other sites while you are
+// logged in as admin.)
+// Thanks Chris Cowan.
+function cd_checkReferrer() {
+    global $fullServerURL;
+    
+    if( !isset($_SERVER['HTTP_REFERER']) ||
+        strpos($_SERVER['HTTP_REFERER'], $fullServerURL) !== 0 ) {
+        
+        die( "Bad referrer header" );
+        }
+    }
+
 
 // testing:
 //echo "fsfDENasdfIED"; die();
@@ -1456,7 +1471,7 @@ function cd_showLog() {
     
     for( $i=0; $i<$numRows; $i++ ) {
         $time = mysql_result( $result, $i, "entry_time" );
-        $entry = mysql_result( $result, $i, "entry" );
+        $entry = htmlspecialchars( mysql_result( $result, $i, "entry" ) );
 
         echo "<b>$time</b>:<br><pre>$entry</pre><hr>\n";
         }
@@ -7737,7 +7752,7 @@ function cd_newHouseForUser( $user_id ) {
 
 
 function cd_logout() {
-
+    cd_checkReferrer();
     cd_clearPasswordCookie();
 
     echo "Logged out";
@@ -9660,6 +9675,8 @@ function cd_checkPassword( $inFunctionName ) {
         $password_hash = $newSalt . "_" . $newHash;
         }
     else if( isset( $_COOKIE[ $cookieName ] ) ) {
+        cd_checkReferrer();
+
         $password_hash = $_COOKIE[ $cookieName ];
         
         // check that it's a good hash
